--- a/todo.txt
+++ b/todo.txt
@@ -3,7 +3,8 @@ TODO:
 [/] 1.Create CRUD API for customers, salesperson, customers
 [/] 2. Create function for Sales Invoice
 [/] 3. Create CRUD for mechanic, parts, service 
-[] 4. Create function in Service mechanic, Parts Used, Service Ticket 
-[] 5.Create Auth
-[] 6.Create Unit Testing using Jest/Mocha/Chai
-[] 7. Implement Clean Architecture
+[/] 4. Create function in Service mechanic, Parts Used, Service Ticket 
+[] 5. Manual Testing of API using POSTMAN
+[] 6.Create Auth
+[] 7.Create Unit Testing using Jest/Mocha/Chai
+[] 8. Implement Clean Architecture
