--- a/todo.txt
+++ b/todo.txt
@@ -8,8 +8,13 @@ TODO:
 [/] 6.Create Basic Auth
 
 8/12/2022
-[] 7. Brcypt in Auth
+[/] 7. Brcypt in Auth
 [] 8.Create Unit Testing using Jest/Mocha/Chai
+
+
 
 8/15/2022 Start to Implement Clean Architecture
 [] 9. Implement Clean Architecture
+
+
+[] 10. User Duplication Error Message
